# k8s-clam

./: .gitignore  LICENSE  README.md  helmfile.yaml  justfile
.github/workflows/: blue-app-tag.yaml  deploy.yaml  deploy.yml  kubectl-apply.yaml  red-app-tag.yaml  reusable-docker.yaml
blue/pipeline/: runner-controller.yaml  runner-deployment.yaml
blue/rbac/: ci-service-account.yaml  ci-token-secret.yaml  minimal-role-binding.yaml  minimal-role.yaml  sa-token.yaml
blue/simple_app/api/: Dockerfile  modelenv  package.json  tsconfig.json
blue/simple_app/client/: Dockerfile  package.json
blue/simple_app/k8s/: app-config.yaml  app-secret.yaml  backend.yaml  db-namespace.yaml  frontend.yaml  postgres-config.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres.yaml
manifests/: limitrange.yaml
manifests/kubewarden/: default.yaml  policy.yaml
manifests/policies/: enforce-kata-runtime.yaml  limit-pod-density.yaml  network-policies.yaml  pod-security-standards.yaml  resourcequota.yaml
openstack/: README.md  main.tf  network.tf  outputs.tf  talos.tf
red/api/: Cargo.toml  Dockerfile
red/api/src/: main.rs
red/api/src/exploits/: command.rs  fork_bomb.rs  kubectl_install.rs  mod.rs  overflow.rs
red/client/: README.md  index.html  tailwind.config.ts
red/client/src/: index.css
red/k8s/: api.yaml
red/manual_attacks/: block_kube_dns  clusterrole.yaml  clusterrolebinding.yaml  cpu_exaustion.yaml  escape-sidecar.yaml  evil-sidecar.yaml  memory_exaustion.md  oomkills.yaml  rce.md  reverse_shell_sidecar.yaml  see_rights_list.yaml  test.yaml
(+14 files in other folders)
